add image to Category and rename Image entity